# ephys

./: .gitignore  AGENTS.md  README.md  probes.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data_wrangling/: binary_data.py  intan.py  neuroviz.py  spike_times.py  spikesorter.py  ttls.py
docs/: _quarto.yml  index.html  index.qmd  search.json
docs/data_wrangling/: intan.html  intan.qmd
ephys/: __init__.py  probes.py
ephys/data_wrangling/: neuroviz.py  spike_times.py  ttls.py
ephys/plotting/: forest.py  grid_axes.py  log_log_scatter.py  modulation_histogram.py  psth_raster.py  raster_layout.py  scatter_marginals.py  traces.py
ephys/processing/: __init__.py  basis.py  envelope.py  filtering.py  psth.py  scaling.py  timeseries.py
plotting/: __init__.py  broken_axes.py  grid_axes.py  psth_raster.py  raster_layout.py  traces.py
processing/: filtering.py  spike_align.py  spike_rate.py  zca.py
scripts/: preprocess_motion_zca.py  preprocessing.py  preview_scatter_marginals.py
tests/: conftest.py
tests/data_wrangling/: test_intan.py  test_spike_times_intervals.py  test_ttls.py
tests/plotting/: test_broken_axes.py  test_log_log_scatter.py  test_modulation_histogram.py  test_scatter_marginals.py
tests/processing/: test_basis.py  test_spike_align.py
