[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "ephys"
version = "0.0.0"
description = "Neuroscience electrophysiology data analysis utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "numpy",
    "probeinterface>=0.3.2",
    "scipy",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff",
    "ty",
]

[tool.hatch.build.targets.sdist]
include = [
    "/data_wrangling",
    "/ephys",
    "/plotting",
    "/processing",
]

[tool.hatch.build.targets.wheel]
packages = ["data_wrangling", "ephys", "plotting", "processing"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["data_wrangling", "ephys", "plotting", "processing", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.extend-per-file-ignores]
"scripts/**/*.py" = ["E402"]

[tool.ty.src]
# Optional scripts use legacy `ephys.*` imports and extra deps not in this package;
# type-check installable modules and tests until those are unified.
include = ["data_wrangling", "ephys", "plotting", "processing", "tests"]
